# hoka

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  vcpkg.json
Testing/Database/: DatabaseTests.cpp
src/: hoka.manifest  main.cpp  resource.rc
src/Database/: Database.cpp  Database.h
src/KeyLogger/: KeyLogger.cpp  KeyLogger.h
src/Models/: KeyPress.h  KeyStatistics.h
src/UI/: MainWindow.cpp  MainWindow.h  SystemTray.cpp  SystemTray.h
